<resources>
    <string name="app_name">Forever Free Dictionary</string>

<!--    common-->
    <string name="ok">OK</string>
    <string name="unknown_error_message">Oops! something went wrong, please try late on.</string>
    <string name="clipboard_label_text_copied">Copied Text</string>
    <string name="toast_message_text_copied">%s copied </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Word of the Day</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_history">History</string>
    <string name="menu_my_vocabulary">My Vocabulary</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_group_Communicate">Communicate</string>
    <string name="menu_invite_friends">Invite Friends</string>
    <string name="menu_rate_app">Rate This App</string>
    <string name="menu_about_us_feedback">About Us &amp; Feedback</string>
    <string name="default_snack_bar_action">@string/ok</string>

    <string name="menu_pre">Pre</string>
    <string name="menu_next">Next</string>
    <string name="a">A</string>

    <!--    search box-->
    <string name="search_box_hint">Search…</string>
    <string name="switch_dark_mode">Dark Mode</string>
    <string name="no_result_found">no result found</string>

    <!--    voice recognition message-->
    <string name="voice_recognizer_hint">Try Saying Something</string>
    <string name="voice_recognizer_error_msg">Oops! something went wrong. Try again.</string>
    <string name="voice_recognizer_error_msg_network">Network not connected</string>
    <string name="voice_recognizer_error_msg_network_timeout">It seems like you don\'t have a stable network connection.</string>
    <string name="voice_recognizer_error_msg_speech_timeout">Didn\'t catch that. Try speaking again by tapping the mic icon.</string>
    <string name="voice_recognizer_error_msg_no_match">Didn\'t catch that. Try speaking again by tapping the mic icon.</string>
    <string name="voice_recognizer_error_msg_server">Sorry we can\'t connect to the remote server</string>
    <string name="voice_recognizer_error_msg_recognition_service_busy">Sorry the service is busy now. Please try it late on</string>
    <string name="voice_recognizer_error_msg_permissions">Please allow us to grant the permission to access your microphone</string>
    <string name="voice_recognizer_error_msg_audio_error">Oops! something happened while recording audio.</string>
    <string name="voice_recognizer_error_msg_client_error">Oops! something happened while recording audio.</string>

<!--    OCR text recognition-->
    <string name="ocr_activity_title">Detect Your Words</string>
    <string name="switch_Detect">Detect</string>
    <string name="switch_auto_focus">Auto Focus</string>
    <string name="switch_flash">Use Flash</string>
    <string name="ocr_hint">Tap on detected text block which contains your word</string>
    <string name="ocr_select_word_hint">Choose your word</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>

    <!--    content description-->
    <string name="des_mic_button">convert your speech to text</string>
    <string name="des_camera_button">determine text through your camera</string>
    <string name="des_empty_search_box">clear all words</string>
    <string name="des_favorite_button">add this word to your favorites list?</string>

    <string name="share_message">I\'m using this app and thought you might like it too.
        \nhttps://play.google.com/store/apps/details?id=%s</string>

<!--    history screen-->
    <string name="ipa_format">/%s$%s/</string>
    <string name="ipa_br_format">/%s/</string>
    <string name="dump_word">water</string>
    <string name="dump_ipaAme">ˈwɒːtər</string>
    <string name="dump_time_lapsed">6 hours</string>

<!--    favorite screen-->
    <string name="ask_for_rollback_message">%s has been removed from your favorites list. do you want to hold it back?</string>
    <string name="favorite_rollback">roll it back</string>

<!--    reminder screen-->
    <string name="reminder_notification_message">do you remember this word %s</string>
    <string name="reminder_notification_message_plural">do you remember these words %s</string>

<!--    my vocabulary screen-->
    <string name="add_vocabulary_group">New Group</string>
    <string name="add_vocabulary_hint">Enter Your Group Name</string>
    <string name="my_vocabulary_group_dialog_picker_title">Choose one or More</string>
    <string name="new_vocabulary_group">New Group</string>

<!--    about us-->
    <string name="about_us_message">
        Hi forks,
        \nMy name is Linh, I\'m an Android developer and also an English learner.
        Like other English learners, a dictionary is the first essential stuff I must have. It could be considered as a golden key to open the portal to the English world. So that I have tried dozens of digital dictionaries I could download from the Play Store free of charge. Of course, all them didn\'t satisfied me, bad experiences, ads everywhere,… I even paid for a famous premium one which having millions of downloads from the store.  However I realized it wasn\'t as good as it\'s been supposed to be, right after that. It lacked of vital features to be a good dictionary, no word family, no synonym, no opposite meaning, just American accent sound,… I\'m so disappointed.
        \n"Why don\'t build for myself one? Yeah! Why am I using other person\'s apps While I'm a developer." So that this app went to the world, cool right?.
        \nMy first purpose building this app was just for my personal use. But now I want to share it to all of you who want a free dictionary without ads, additional fee. I will keep it as free as it\'s to be. I promise will never ask you for any mount of money. So use it as your way.
        Nothing is perfect, as a developer I always want to build a fancy app tho. if you\'re using this app and happy with it, that would make me happy too. However if you\'ve faced any problems or have any ideas to improve my app, please feel free to let me know. You can leave a comment on the store or a directly email linhphan0108@gmail.com. all constructive ideas are welcome.
        \nEnjoy and peace!</string>
</resources>
