<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_today_black_36"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/round_star_border_black_36"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/round_history_black_36"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_my_vocabulary"
            android:icon="@drawable/outline_font_download_black_36"
            android:title="@string/menu_my_vocabulary" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/round_alarm_black_36"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/menu_group_Communicate">
        <menu>
            <item
                android:id="@+id/action_invite_friends"
                android:icon="@drawable/round_people_black_36"
                android:title="@string/menu_invite_friends" />
            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/round_rate_review_black_36"
                android:title="@string/menu_rate_app" />
            <item
                android:id="@+id/nav_about_us_feedback"
                android:icon="@drawable/round_info_black_36"
                android:title="@string/menu_about_us_feedback" />
        </menu>
    </item>

</menu>
