<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foreverfreedictionary.ui.screen.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.foreverfreedictionary.ui.screen.gallery.GalleryFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.foreverfreedictionary.ui.screen.slideshow.SlideshowFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_my_vocabulary"
        android:name="com.example.foreverfreedictionary.ui.screen.tools.ToolsFragment"
        android:label="@string/menu_my_vocabulary"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.foreverfreedictionary.ui.screen.share.ShareFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_share" />

    <activity
        android:id="@+id/nav_about_us_feedback"
        android:name="com.example.foreverfreedictionary.ui.screen.about_us.AboutUsActivity"
        android:label="@string/menu_about_us_feedback"
        tools:layout="@layout/activity_about_us" />

    <activity android:id="@+id/resultActivity"
        android:name="com.example.foreverfreedictionary.ui.screen.result.ResultActivity"
        tools:layout="@layout/activity_result_screen"/>
</navigation>